# jwt-toolkit

./: .cspell.json  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  main.py  pyproject.toml
.claude/: settings.json
.claude/skills/check/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/new-command/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/security-review/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
jwt_toolkit/: cli.py
jwt_toolkit/cli/: __init__.py  algorithms.py  banner.py  console.py  decoding.py  panels.py
jwt_toolkit/commands/: audit.py  crack.py  decode.py  download_wordlists.py  forge.py  generate_secret.py  inspect.py  sign.py  verify.py
jwt_toolkit/core/: CLAUDE.md  auditor.py  crypto.py  decoder.py  encoding.py  errors.py  forge.py  jwks.py
tests/: conftest.py  helpers.py  test_auditor.py  test_cmd_audit.py  test_cmd_crack.py  test_cmd_decode.py  test_cmd_download_wordlists.py  test_cmd_forge.py  test_cmd_generate_secret.py  test_cmd_sign.py  test_cmd_verify.py  test_crypto.py  test_crypto_asymmetric.py  test_decoder.py  test_forge.py  test_jwks.py
wordlists/: common-secrets.txt
