[project]
name = "jwt-toolkit"
version = "0.1.0"
description = "A command-line toolkit for inspecting, verifying, cracking, and securing JSON Web Tokens. built to expose how JWT signing works and where it breaks."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "rich>=15.0.0",
]

[project.scripts]
jwt-toolkit = "jwt_toolkit.cli:cli"
